更新配置文件

--- a/.example.env
+++ b/.example.env
@@ -1,3 +1,7 @@
+# Composer项目名称
+# 若要在同一台服务器上部署多个AppleAutoPro，请修改此变量
+COMPOSE_PROJECT_NAME=appleautopro
+
 # 数据库连接信息
 MARIADB_HOST=mariadb
 MARIADB_PORT=3306
@@ -15,18 +19,17 @@ REDIS_PREFIX=appleauto_
 
 # 网站运行端口
 WEB_PORT=18523
-
-# 后端线程数
+# 后端线程数，最多同时执行的任务数
 BACKEND_THREADS=4
-
-[APP]
-# 时区设置
-DEFAULT_TIMEZONE = Asia/Shanghai
+# 网站访问域名，需与授权域名一致，结尾无需斜杠
+API_URL=https://
+# API KEY，请修改为随机字符串
+API_KEY=
+# 授权码
+# 若使用离线证书，请在此处留空。授权使用方法请参考文档
+LICENSE=
 # 默认语言 Default language
-# zh-cn/en-us/vi-vn
-DEFAULT_LANG = zh-cn
-# 网站访问域名，需与授权域名一致
-URL = https://xxxx.com/
-# 在线授权key
-# 若使用离线授权，请在此处留空并查阅教程
-LICENSE =
+# zh_cn/en_us/vi_vn
+APP_LANG=zh_cn
+# 时区设置
+TIMEZONE=Asia/Shanghai
