--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 services:
   php-fpm:
     image: pplulee/sidetp:latest
-    container_name: appleautopro-php
     volumes:
       - ./web:/var/www/html
       - .env:/var/www/html/.env
@@ -9,36 +8,72 @@ services:
     depends_on:
       mariadb:
         condition: service_healthy
+      redis:
+        condition: service_healthy
     networks:
       - appleautopro-network
+    healthcheck:
+      test: ["CMD", "test", "-f", "/var/run/php/php-fpm.pid"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 60s
     restart: always
+
+#  caddy:
+#    image: caddy:latest
+#    ports:
+#      - "80:80"
+#      - "443:443"
+#    volumes:
+#      - ./data/Caddyfile:/etc/caddy/Caddyfile
+#      - ./data/caddy/data:/data
+#      - ./data/caddy:/config
+#      - ./web:/var/www/html
+#    depends_on:
+#      php-fpm:
+#        condition: service_healthy
+#    networks:
+#      - appleautopro-network
+#    restart: always
 
   nginx:
     image: nginx:latest
-    container_name: appleautopro-nginx
     ports:
       - "127.0.0.1:${WEB_PORT}:80"
+#      - "[::1]:${WEB_PORT}:80"
     volumes:
       - ./data/nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - ./web:/var/www/html
     depends_on:
-      - php-fpm
+      php-fpm:
+        condition: service_healthy
     networks:
       - appleautopro-network
     restart: always
 
   redis:
     image: redis:latest
-    container_name: appleautopro-redis
+    # 前后端分离部署时，请取消以下注释内容，并在env文件中设置redis密码
+#    env_file:
+#      - .env
+#    command: redis-server --requirepass "${REDIS_PASSWORD}" --bind 0.0.0.0
+#    ports:
+#      - "6379:6379"
     volumes:
       - ./data/redis:/data
     networks:
       - appleautopro-network
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 5s
     restart: always
 
   mariadb:
     image: mariadb:latest
-    container_name: appleautopro-mariadb
     env_file:
       - .env
     volumes:
@@ -54,11 +89,14 @@ services:
       retries: 3
       start_period: 20s
 
+  # 前后端分离部署时，请注释backend服务
   backend:
     image: pplulee/appleautopro:v4
-    container_name: appleautopro-backend
+    env_file:
+      - .env
     depends_on:
-      - php-fpm
+      php-fpm:
+        condition: service_healthy
     networks:
       - appleautopro-network
     restart: always
